# larapy-documentation-website

./: .backup_requirements.txt  .env.example  .flake8  .gitignore  .gitkeep  .last_package_update  Makefile  README.md  auto_update_package.py  dev_update.sh  install_git_hook.sh  larapy_cli.py  larapy_documentation  larapy_main.py  pyproject.toml  requirements.txt  update_package.sh
app/: __init__.py
app/Console/: Kernel.py  __init__.py
app/Console/Commands/: TestCommand.py  __init__.py
app/Http/: Kernel.py
app/Http/Controllers/: Controller.py  HomeController.py
app/Models/: User.py  __init__.py
app/Providers/: AppServiceProvider.py  AuthServiceProvider.py  RouteServiceProvider.py
app/http/: __init__.py
app/http/controllers/: home_controller.py
app/models/: user.py
bootstrap/: __init__.py  app.py
config/: app.py  database.py  view.py
database/factories/: user_factory.py
database/migrations/: 2024_01_01_000000_create_users_table.py  2025_09_06_072841_create_users_table.py  2025_09_06_110804_create_posts_table.py  __init__.py
database/seeders/: user_seeder.py
git-hooks/: post-commit
public/: index.py
public/css/: app.css
public/js/: app.js
resources/css/: app.css
resources/js/: app.js
resources/views/: home.html
resources/views/layouts/: __init__.py  app.html
routes/: __init__.py  api.py  console.py  web.py
tests/: TestCase.py
